Sivun perusrakenne ja sisältö

--- a/index.html
+++ b/index.html
@@ -3,9 +3,89 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title>Helka Lantto - Curriculum Vitae</title>
+    <title>Helka Lantto - Résumé</title>
   </head>
   <body>
-    <p>CV</p>
+    <div class="main-grid">
+
+      <div class="main-grid-item sub-grid">
+        <div class="sub-grid-item grid-item-span-4 name">
+          <h1>Helka Lantto</h1>
+        </div>
+        <div class="sub-grid-item grid-item-span-3 job-title">
+          <h2>Software developer</h2>
+        </div>
+        <div class="sub-grid-item grid-item-span-1 contact">
+          <p class="email"><a href="mailto:hmlantto@gmail.com">hmlantto@gmail.com</a></p>
+        </div>
+      </div>
+
+      <div class="main-grid-item sub-grid">
+        <div class="sub-grid-item">
+          <h3>Profile</h3>
+        </div>
+        <div class="sub-grid-item grid-item-span-3">
+          <p>Full-stack software developer interested in writing maintainable, easy-to-read code. 
+          Likes object-oriented programming, informative documentation and clean visual looks. 
+          Will follow the rules until they need breaking.</p>
+        </div>
+      </div>
+
+      <div class="main-grid-item sub-grid">
+        <div class="sub-grid-item">
+          <h3>Skills</h3>
+        </div>
+        <div class="sub-grid-item sub-sub-grid grid-item-span-3">
+          <div class="sub-sub-grid-item">
+            <h4>Back-end coding</h4>
+            <p>My main strength. Logging makes everything easier.</p>
+          </div>
+          <div class="sub-sub-grid-item">
+            <h4>Front-end coding</h4>
+            <p>I can code serviceable UIs, though I'll leave the fancier tricks to others.</p>
+          </div>
+          <div class="sub-sub-grid-item">
+            <h4>Databases</h4>
+            <p>Relational databases, mainly SQL Server, but also a smattering of SQLite and PostreSQL.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="main-grid-item sub-grid">
+        <div class="sub-grid-item grid-item-span-1">
+          <h3>Technical</h3>
+        </div>
+        <div class="sub-grid-item sub-sub-grid grid-item-span-3">
+          <div class="sub-sub-grid-item technical-grid-item">C#</div>
+          <div class="sub-sub-grid-item technical-grid-item">HTML</div>
+          <div class="sub-sub-grid-item technical-grid-item">React</div>
+          <div class="sub-sub-grid-item technical-grid-item">JavaScript</div>
+          <div class="sub-sub-grid-item technical-grid-item">CSS</div>
+          <div class="sub-sub-grid-item technical-grid-item">Blazor</div>
+          <div class="sub-sub-grid-item technical-grid-item">SQL</div>
+          <div class="sub-sub-grid-item technical-grid-item">Bootstrap</div>
+          <div class="sub-sub-grid-item technical-grid-item">Git</div>
+        </div>
+      </div>
+
+      <div class="main-grid-item sub-grid">
+        <div class="sub-grid-item">
+          <h3>Experience</h3>
+        </div>
+        <div class="sub-grid-item grid-item-span-3">
+          <div class="employer-name">
+            <h4>Juradin Oy</h4>
+          </div>
+          <div class="employment-dates">
+            <p>2020-</p>
+          </div>
+          <div class="employment-description">
+            <p>My tasks have included both developing projects from scratch according to client specifications as well as maintaining and further developing existing projects. 
+            I have mainly developed Windows services and full-stack web applications.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </body>
 </html>
