Lisää gridin muotoilua

--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
           <h3>Experience</h3>
         </div>
         <div class="sub-grid-item grid-item-span-3">
-          <div class="employer-name">
-            <h4>Juradin Oy</h4>
-          </div>
-          <div class="employment-dates">
-            <p>2020-</p>
+          <div class="employment-header">
+            <h4 class="employer-name">Juradin Oy</h4>
+            <span class="employment-dates">2020-</span>
           </div>
           <div class="employment-description">
             <p>My tasks have included both developing projects from scratch according to client specifications as well as maintaining and further developing existing projects. 
