--- a/index.html
+++ b/index.html
@@ -8,71 +8,71 @@
   <body>
     <div class="main-grid">
 
-      <div class="main-grid-item sub-grid">
-        <div class="sub-grid-item grid-item-span-4 name">
+      <div class="main-grid-row row-grid">
+        <div class="row-grid-item grid-item-span-4 name">
           <h1>Helka Lantto</h1>
         </div>
-        <div class="sub-grid-item grid-item-span-3 job-title">
+        <div class="row-grid-item grid-item-span-3 job-title">
           <h2>Software developer</h2>
         </div>
-        <div class="sub-grid-item grid-item-span-1 contact">
+        <div class="row-grid-item contact">
           <p class="email"><a href="mailto:hmlantto@gmail.com">hmlantto@gmail.com</a></p>
         </div>
       </div>
 
-      <div class="main-grid-item sub-grid">
-        <div class="sub-grid-item">
+      <div class="main-grid-row row-grid">
+        <div class="row-grid-item">
           <h3>Profile</h3>
         </div>
-        <div class="sub-grid-item grid-item-span-3">
+        <div class="row-grid-item grid-item-span-3 content-area">
           <p>Full-stack software developer interested in writing maintainable, easy-to-read code. 
           Likes object-oriented programming, informative documentation and clean visual looks. 
           Will follow the rules until they need breaking.</p>
         </div>
       </div>
 
-      <div class="main-grid-item sub-grid">
-        <div class="sub-grid-item">
+      <div class="main-grid-row row-grid">
+        <div class="row-grid-item">
           <h3>Skills</h3>
         </div>
-        <div class="sub-grid-item sub-sub-grid grid-item-span-3">
-          <div class="sub-sub-grid-item">
+        <div class="row-grid-item skills-grid grid-item-span-3 content-area">
+          <div class="skills-item">
             <h4>Back-end coding</h4>
             <p>My main strength. Logging makes everything easier.</p>
           </div>
-          <div class="sub-sub-grid-item">
+          <div class="skills-item">
             <h4>Front-end coding</h4>
             <p>I can code serviceable UIs, though I'll leave the fancier tricks to others.</p>
           </div>
-          <div class="sub-sub-grid-item">
+          <div class="skills-item">
             <h4>Databases</h4>
             <p>Relational databases, mainly SQL Server, but also a smattering of SQLite and PostreSQL.</p>
           </div>
         </div>
       </div>
 
-      <div class="main-grid-item sub-grid">
-        <div class="sub-grid-item grid-item-span-1">
+      <div class="main-grid-row row-grid">
+        <div class="row-grid-item">
           <h3>Technical</h3>
         </div>
-        <div class="sub-grid-item sub-sub-grid grid-item-span-3">
-          <div class="sub-sub-grid-item technical-grid-item">C#</div>
-          <div class="sub-sub-grid-item technical-grid-item">HTML</div>
-          <div class="sub-sub-grid-item technical-grid-item">React</div>
-          <div class="sub-sub-grid-item technical-grid-item">JavaScript</div>
-          <div class="sub-sub-grid-item technical-grid-item">CSS</div>
-          <div class="sub-sub-grid-item technical-grid-item">Blazor</div>
-          <div class="sub-sub-grid-item technical-grid-item">SQL</div>
-          <div class="sub-sub-grid-item technical-grid-item">Bootstrap</div>
-          <div class="sub-sub-grid-item technical-grid-item">Git</div>
+        <div class="row-grid-item technical-grid grid-item-span-3 content-area">
+          <div class="technical-item">C#</div>
+          <div class="technical-item">JavaScript</div>
+          <div class="technical-item">SQL</div>
+          <div class="technical-item">HTML</div>
+          <div class="technical-item">CSS</div>
+          <div class="technical-item">Bootstrap</div>
+          <div class="technical-item">React</div>
+          <div class="technical-item">Blazor</div>
+          <div class="technical-item">Git</div>
         </div>
       </div>
 
-      <div class="main-grid-item sub-grid">
-        <div class="sub-grid-item">
+      <div class="main-grid-row row-grid">
+        <div class="row-grid-item">
           <h3>Experience</h3>
         </div>
-        <div class="sub-grid-item grid-item-span-3">
+        <div class="row-grid-item grid-item-span-3 content-area">
           <div class="employment-header">
             <h4 class="employer-name">Juradin Oy</h4>
             <span class="employment-dates">2020-</span>
